[gd_scene load_steps=6 format=3 uid="uid://fxdpfy0ta6nv"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_hffmh"]
[ext_resource type="PackedScene" uid="uid://brkcycmd2u41g" path="res://player.tscn" id="1_losnl"]
[ext_resource type="PackedScene" uid="uid://c6der0y1481yg" path="res://lvl_up_canvas.tscn" id="4_o70qo"]
[ext_resource type="PackedScene" uid="uid://5cafdmame1ij" path="res://game_world.tscn" id="5_4l73u"]

[sub_resource type="Curve2D" id="Curve2D_4eowv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -37, -54, 0, 0, 0, 0, 1988, -27, 0, 0, 0, 0, 1999, 1160, 0, 0, 0, 0, -35, 1160, 0, 0, 0, 0, -37, -54)
}
point_count = 5

[node name="Game" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_hffmh")

[node name="Player" parent="." node_paths=PackedStringArray("xp_bar") instance=ExtResource("1_losnl")]
unique_name_in_owner = true
position = Vector2(979, 562)
xp_bar = NodePath("../GUI/XPBar")

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-984, -560)
curve = SubResource("Curve2D_4eowv")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-37, -54)
rotation = 0.0133325

[node name="GameOverCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="Label" type="Label" parent="GameOverCanvas/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LvlUpCanvas" parent="." instance=ExtResource("4_o70qo")]
unique_name_in_owner = true
visible = false

[node name="GameWorld" parent="." instance=ExtResource("5_4l73u")]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(2.08165e-12, 2.08165e-12)
inner_size = Vector2(80, 50)
ground_probability = 0.008

[node name="Enemies" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="GUI" type="CanvasLayer" parent="."]
layer = 10

[node name="XPBar" type="ProgressBar" parent="GUI"]
unique_name_in_owner = true
z_index = 10
z_as_relative = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -630.0
offset_top = 50.0
offset_right = 630.0
offset_bottom = 77.0
grow_horizontal = 2
size_flags_horizontal = 4
show_percentage = false

[node name="Playtime" type="Label" parent="GUI"]
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "20"

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BGLayer"]
offset_right = 1956.0
offset_bottom = 1120.0
color = Color(0.839216, 1, 0.768627, 1)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="lvl_up" from="Player" to="." method="_on_player_lvl_up"]
[connection signal="upgrade_selected" from="LvlUpCanvas" to="." method="_on_lvl_up_canvas_upgrade_selected"]
